# tecscanner

./: .gitignore  .gitmodules  CMakeCache.txt  README.md  mid360_config.json
3rd/Livox-SDK2/: README.md
3rd/Livox-SDK2/samples/multi_lidars_upgrade/: main.cpp
3rd/Livox-SDK2/sdk_core/comm/CRC/: Crc.cpp  Crc.h  Crc_Cfg.cpp  Crc_Cfg.h
3rd/Livox-SDK2/sdk_core/upgrade/: firmware.cpp
code/: CMakeLists.txt  LivoxClient.h  main.cpp  save_laz.h
save_laz/: CMakeLists.txt  __init__.py  csv_writer.cpp  csv_writer.h  imu_writer.cpp  imu_writer.h  livox_collector.cpp  livox_collector.h  main.cpp  save_laz.cpp  save_laz.h  utils.py
scripts/: 99-usb-automount.rules  build_laszip.sh  build_livox_sdk2.sh  compile_save_laz.sh  configure_network.sh  configure_swap.sh  install.sh  install_packages.sh  install_usbmount.sh  setup.sh  setup_python_env.sh  setup_service.sh  setup_usb_mount.sh  update_submodules.sh  usb-automount.sh
webapp/: __init__.py  logging_config.py  recording_manager.py
webapp/templates/: index.html
